<resources>
    <string name="app_name">SmartRide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_bluetooth">Bluetooth</string>

    <string name="action_features">Features</string>

    <string name="action_home">Home</string>
    <string name="action_record">Record</string>
    <string name="action_overview">Overview</string>
    <string name="action_map">Map</string>

    <string name="action_communicate">Communicate</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>

    <string-array name="last_ride_array">
        <item>Last Ride 1</item>
        <item>Last Ride 2</item>
        <item>Last Ride 3</item>
        <item>Last Ride 4</item>
        <item>Last Ride 5</item>
        <item>Last Ride 6</item>
        <item>Last Ride 7</item>
        <item>Last Ride 8</item>
        <item>Last Ride 9</item>
        <item>Last Ride 10</item>
    </string-array>

    <string-array name="actual_ride_array">
        <item>Ski Gauche</item>
        <item>Ski Droit</item>
    </string-array>

</resources>
