<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/action_features">
            <menu>
                <item
                    android:id="@+id/home"
                    android:icon="@drawable/home"
                    android:title="@string/action_home" />
                <item
                    android:id="@+id/record"
                    android:icon="@drawable/snow"
                    android:title="@string/action_record"/>
                <item
                    android:id="@+id/overview"
                    android:icon="@drawable/courbelinear"
                    android:title="@string/action_overview" />
                <item
                    android:id="@+id/map"
                    android:icon="@drawable/location"
                    android:title="@string/action_map" />
            </menu>
        </item>
    </group>

    <item android:title="@string/action_communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_send" />
        </menu>
    </item>

</menu>
