<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_bluetooth"
        android:icon="@drawable/bluetoothwhite"
        android:orderInCategory="100"
        android:title="@string/action_bluetooth"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="Logout"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_quitter"
        android:orderInCategory="100"
        android:title="Quit Application"
        app:showAsAction="never" />

</menu>
